Revision history for Test-Harness

3.10    ---
        - fault unknown TAP tokens in TAP v13 or later.
        - fix undefined value warnings with bleadperl.

3.09    2008-02-10
        - support for HARNESS_PERL_SWITCHES containing things like 
          '-e "system(shift)"'.
        - set HARNESS_IS_VERBOSE during verbose testing.
        - documentation fixes.

3.08	2008-02-08
        - added support for 'out' option to
          Test::Harness::execute_tests. See #32476. Thanks RENEEB.
        - Fixed YAMLish handling of non-alphanumeric hash keys.
        - Added --dry option to prove for 2.64 compatibility.

3.07	2008-01-13
        - prove now supports HARNESS_PERL_SWITCHES.
        - restored TEST_VERBOSE to prove.

3.06    2008-01-01
        - Skip t/unicode.t if PERL_UNICODE set. Fixes #31731.
          Thanks Lukas.
        - App::Prove::State no longer complains about tests that
          are deleted.
        - --state=new and --state=old now consider the modification time
          of test scripts.
        - Made test suite core-compatible.

3.05    2007-12-09
        - Skip unicode.t if Encode unavailable
        - Support for .proverc files.
        - Clarified prove documentation.

3.04    2007-12-02
        - Fixed output leakage with really_quiet set.
        - Progress reports for tests without plans now show
          "143/?" instead of "143/0".
        - Made TAP::Harness::runtests support aliases for test names.
        - Made it possible to pass command line args to test programs
          from prove, TAP::Harness, TAP::Parser.
        - Added --state switch to prove.

3.03    2007-11-17
        - Fixed some little bugs-waiting-to-happen inside
          TAP::Parser::Grammar.
        - Added parser_args callback to TAP::Harness.
        - Made @INC propagation even more compatible with 2.64 so that
          parrot still works *and* #30796 is fixed.

3.02    2007-11-15
        - Process I/O now unbuffered, uses sysread, plays better with