@@ -184,6 +184,15 @@ my %language_for;
                 return $self->_make_yaml_token( $pad, $marker );
             },
         },
+        pragma => {
+            syntax =>
+              qr/^ pragma \s+ ( [-+] \w+ \s* (?: , \s* [-+] \w+ \s* )* ) $/x,
+            handler => sub {
+                my ( $self, $line ) = @_;
+                my $pragmas = $1;
+                return $self->_make_pragma_token( $line, $pragmas );
+            },
+        },
     );
 
     %language_for = (
@@ -436,6 +445,15 @@ sub _make_yaml_token {
         type => 'yaml',
         raw  => $raw,
         data => $data
+    };
+}
+
+sub _make_pragma_token {
+    my ( $self, $line, $pragmas ) = @_;
+    return {
+        type    => 'pragma',
+        raw     => $line,
+        pragmas => [ split /\s*,\s*/, _trim($pragmas) ],
     };
 }
 
