@@ -2240,11 +2240,50 @@ my %samples = (
         is_good_plan  => FALSE,
         tests_planned => FALSE,
         tests_run     => 0,
-        parse_errors  => [
-            'Unknown TAP token: "1..0 # skipping: rope"',
-            'No plan found in TAP output'
+        parse_errors  => ['No plan found in TAP output'],
+        'exit'        => 0,
+        wait          => 0,
+        version       => 13,
+    },
+    strict => {
+        results => [
+            {   is_version => TRUE,
+                raw        => 'TAP version 13',
+            },
+            {   is_plan => TRUE,
+                raw     => '1..1',
+            },
+            {   is_pragma => TRUE,
+                raw       => 'pragma +strict',
+                pragmas   => ['+strict'],
+            },
+            {   is_unknown => TRUE, raw => 'Nonsense!',
+            },
+            {   is_pragma => TRUE,
+                raw       => 'pragma -strict',
+                pragmas   => ['-strict'],
+            },
+            {   is_unknown => TRUE,
+                raw        => "Doesn't matter.",
+            },
+            {   is_test => TRUE,
+                raw     => 'ok 1 All OK',
+            }
         ],
-        'exit'  => 0,
+        plan          => '1..1',
+        passed        => [1],
+        actual_passed => [1],
+        failed        => [],
+        actual_failed => [],
+        todo          => [],
+        todo_passed   => [],
+        skipped       => [],
+        good_plan     => TRUE,
+        is_good_plan  => TRUE,
+        tests_planned => 1,
+        tests_run     => 1,
+        parse_errors  => ['Unknown TAP token: "Nonsense!"'],
+        'exit'  => 0,    # TODO: Is this right???
         wait    => 0,
         version => 13,
     },
@@ -3124,7 +3163,7 @@ sub analyze_test {
                   "... and $method should return a reasonable value ($test/$count)";
             }
             elsif ( ref $answer ) {
-                is_deeply $result->$method(), $answer,
+                is_deeply scalar( $result->$method() ), $answer,
                   "... and $method should return the correct structure ($test/$count)";
             }
             else {
